examples/test_package/DoubleDC_Test/steps/dpl__forbu:rough.pl_run4/#test_analysis_3_result.txt
### Code Evaluation Report: ProbLog Bubblesort Implementation

---

#### **1. Document Title**  
Evaluation of ProbLog Bubblesort Implementation (Hash: 47D659C8)

---

#### **2. Background and Purpose**  
The provided code implements a `bubblesort/3` algorithm in ProbLog, intended to sort a list of integers. The goal of this evaluation is to verify the correctness of the implementation, analyze test results, and ensure compliance with ProbLog's probabilistic and classical reasoning requirements.

---

#### **3. Test Results Summary**  
The test query `query(forth_sort([3,1,2,5,7,12], X))` resulted in an error:  
```
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 5:42.
```

**Failed Query:**  
- `query(forth_sort([3,1,2,5,7,12], X))`  
  - **Expected Result:** Sorted list `[1,2,3,5,7,12]`.  
  - **Actual Result:** Error due to undefined `->/2` operator in ProbLog.

---

#### **4. Failure Localization**  
The error occurs in the `bubble/4` predicate, specifically at line 5:  
```prolog
bubble([H|T], X, Acc, Result) :- (X =< H -> bubble(T, H, [X|Acc], Result) ; bubble(T, X, [H|Acc], Result)).
```
- **Issue:** The `->/2` operator (if-then-else) is not natively supported in ProbLog's classical reasoning mode.  
- **Line Number:** 5.

---

#### **5. Root Cause Analysis**  

**Classical Prolog Analysis:**  
- The `bubblesort/3` and `bubble/4` predicates are logically correct for classical Prolog.  
- Recursive termination is ensured by the base cases (`bubblesort([], Acc, Acc)` and `bubble([], X, Acc, [X|Acc])`).  

**ProbLog Analysis:**  
- The error arises because ProbLog does not support the `->/2` operator in its default mode.  
- ProbLog requires explicit handling of probabilistic facts and implications, which are absent here.  

**DeepProbLog Feature Usage:**  
- **Report:** "DeepProbLog feature not used."

---

#### **6. Overall Analysis**  

**Functional Requirements:**  
- **Classical Reasoning:** Partially met (fails due to `->/2`).  
- **Probabilistic Reasoning:** Not applicable (no probabilistic facts or rules).  
- **Neural Network Integration:** Not used.  

**Edge Cases:**  
- Non-list inputs are not handled.  
- Deep recursion performance is acceptable for small lists but untested for large inputs.  

---

#### **7. Error Summary**  

| No. | Problem                     | Impact                          | Suggestion                                  |
|-----|-----------------------------|---------------------------------|---------------------------------------------|
| 1   | Unsupported `->/2` operator | Code fails to execute in ProbLog | Replace `->/2` with ProbLog-compatible logic (e.g., `if_then_else/3`). |
| 2   | No probabilistic features   | Limited to classical reasoning  | Add probabilistic facts or rules if needed. |

---

**Word Count:** ~400 words.  

**Final Notes:**  
The code requires modification to replace the `->/2` operator with a ProbLog-compatible alternative. Edge cases and probabilistic extensions should be addressed for robustness.